# django-odbc

./: .gitignore  README.md  pyproject.toml  setup.cfg
django_odbc/: client.py  operations.py
src/: aggregates.py  base.py  compat.py  compiler.py  creation.py  introspection.py  metadata.py  operations.py
