[metadata]
name = django_odbc
version = 0.1.0
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = django-odbc is a SQL Server DB backend powered by the pyodbc library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null-none/django-odbc
project_urls =
    Bug Tracker = https://github.com/null-none/django-odbc/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
